--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -29,7 +29,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
 ?>
 
 <div class="container mx-auto flex h-full items-center px-5">
-    <div class="mx-auto w-[412px] max-w-full mb-16" x-data="Authentication">
+    <div class="mx-auto w-[412px] max-w-full mb-16" x-data="Object.assign(Form, Authentication)">
         <header class="sm:text-center mb-7">
             <h2 class="text-2xl mb-3 md:mb-4"><?= __('Reset your password') ?></h2>
             <p class="mb-7 text-md text-text-500"><?= __('We will send you an email to reset your password') ?></p>
