INTERNAL-384: Optimize review form & support recaptcha

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
@@ -68,11 +68,11 @@ input[type="search"] {
 
 .field {
   &-success {
-    @apply text-green-700;
+    @apply text-primary-700;
   }
 
   &-error {
-    @apply text-red-500;
+    @apply text-error;
   }
 
   &-success,
