--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/coupon.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/coupon.phtml
@@ -1,5 +1,7 @@
 <?php
 
+declare(strict_types=1);
+
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Checkout\Block\Cart\Coupon;
