--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
@@ -1,4 +1,5 @@
 <?php
+
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
@@ -9,12 +10,12 @@ use Magento\Customer\Block\Widget\Name;
 use Magento\Framework\Escaper;
 use Hyva\Theme\ViewModel\SvgIcons;
 
-// phpcs:disable Generic.Files.LineLength.TooLong
-
 /** @var CustomerEdit $block */
 /** @var Escaper $escaper */
 /** @var ReCaptcha|null $recaptcha */
+/** @var SvgIcons $hyvaicons */
 /** @var ViewModelRegistry $viewModels */
+
 // Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
 // on the Magento_ReCaptchaCustomer module
 $recaptcha = $block->getData('viewModelRecaptcha');
@@ -23,10 +24,12 @@ $minimumPasswordLength = $block->getMinimumPasswordLength();
 $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
 $storeConfig = $viewModels->require(StoreConfig::class);
 $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocomplete_on_storefront');
-$isChangingEmail = $errorMessage['isChangingEmail'] ?? false;
-$isChangingPassword = $errorMessage['isChangingPassword'] ?? false;
+
 $successMessage = $block->getSuccessMessage();
 $errorMessage = $block->getErrorMessage();
+
+$emailFailed = !empty($errorMessage['email_current_password']) || !empty($errorMessage['email']);
+$newPasswordFailed = !empty($errorMessage['current_password']) || !empty($errorMessage['password']) || !empty($errorMessage['password_confirmation']);
 ?>
 
 <section class="w-full xl:w-1/2">
@@ -34,29 +37,42 @@ $errorMessage = $block->getErrorMessage();
         <?= $escaper->escapeHtml(__('Account Information')) ?>
     </h2>
 
-  <!-- $form declared in x-init to ensure scope for reCAPTCHA validation -->
-  <form x-init="$form = $el"
+    <form
         id="form-validate"
         action="<?= $escaper->escapeUrl($block->getUrl('customer/account/editPost')) ?>"
         method="post"
         enctype="multipart/form-data"
         x-data="Object.assign(hyva.formValidation($el),
             AccountInformation(
-                () => { <?= $escaper->escapeHtmlAttr($recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '') ?> },
-                <?= $isChangingEmail ? 'true' : 'false' ?>,
-                <?= ($isChangingPassword || $block->getChangePassword()) ? 'true' : 'false' ?>,
+                <?= (int) $emailFailed ?>,
+                <?= (int) ($newPasswordFailed || $block->getChangePassword()) ?>,
             ),
+            Form()
         )"
-        @submit.prevent="submitForm(event)"
+        @submit.prevent="function($event) {
+            this.validate().then(() => {
+                // do not rename $form, the variable is the expected name in the recaptcha output
+                const $form = $event.target;
+                <?= $recaptcha ? $escaper->escapeHtmlAttr($recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT)) : '' ?>
+                if (this.errors === 0) {
+                    this.submitForm($event);
+                }
+            })
+            .catch((invalid) => {
+                if (invalid.length > 0) {
+                    invalid[0].focus();
+                }
+            });
+        }"
         autocomplete="off"
     >
         <?php if ($successMessage): ?>
             <div class="text-green-700 -mt-3 mb-3">
                 <span><?= $successMessage ?></span>
             </div>
-        <?php elseif ($errorMessage['general'] ?? false): ?>
+        <?php elseif (!empty($errorMessage['general'])): ?>
             <div class="field-error -mt-3 mb-3">
-                <span class="messages"><?= $escaper->escapeHtml($errorMessage['general'] ?? __('Oops! Something went wrong. Please try again.')) ?></span>
+                <span class="messages"><?= $errorMessage['general'] ?></span>
             </div>
         <?php endif; ?>
 
@@ -79,15 +95,16 @@ $errorMessage = $block->getErrorMessage();
             <?php endif ?>
 
             <label class="flex items-center gap-x-3 mx-4 mb-3 mt-5" for="change-email">
-                <input type="checkbox"
-                       name="change_email"
-                       id="change-email"
-                       value="1"
-                       x-model="showEmailField"
-                       title="<?= $escaper->escapeHtmlAttr(__('Change email')) ?>"
-                       @change="handleCheckboxChange('email-fields')"
-                       class="checkbox__input"
-                       aria-describedby="change_email_description"
+                <input
+                    type="checkbox"
+                    name="change_email"
+                    id="change-email"
+                    value="1"
+                    x-model="showEmailField"
+                    title="<?= $escaper->escapeHtmlAttr(__('Change email')) ?>"
+                    @change="handleCheckboxChange('email-fields')"
+                    class="checkbox__input"
+                    aria-describedby="change_email_description"
                 />
                 <span class="checkbox__control" aria-hidden="true">
                     <?= $hyvaicons->renderHtml('checkmark') ?>
@@ -99,16 +116,17 @@ $errorMessage = $block->getErrorMessage();
             </label>
 
             <label class="flex items-center gap-x-3 mx-4 mt-3" for="change-password">
-                <input type="checkbox"
-                       name="change_password"
-                       id="change-password"
-                       value="1"
-                       x-model="showPasswordFields"
-                       title="<?= $escaper->escapeHtmlAttr(__('Change password')) ?>"
-                       @change="handleCheckboxChange('password-fields')"
+                <input
+                    type="checkbox"
+                    name="change_password"
+                    id="change-password"
+                    value="1"
+                    x-model="showPasswordFields"
+                    title="<?= $escaper->escapeHtmlAttr(__('Change password')) ?>"
+                    @change="handleCheckboxChange('password-fields')"
                     <?php if ($block->getChangePassword()): ?> checked<?php endif; ?>
-                       class="checkbox__input"
-                       aria-describedby="change_password_description"
+                    class="checkbox__input"
+                    aria-describedby="change_password_description"
                 />
                 <span class="checkbox__control" aria-hidden="true">
                     <?= $hyvaicons->renderHtml('checkmark') ?>
@@ -127,24 +145,32 @@ $errorMessage = $block->getErrorMessage();
                     <span><?= $escaper->escapeHtml(__('Email')) ?></span>
                 </label>
                 <div>
-                    <input type="email" name="email" id="email" autocomplete="email" required
-                           value="<?= $escaper->escapeHtmlAttr($block->getCustomer()->getEmail()) ?>"
-                           title="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
-                           placeholder="<?= $escaper->escapeHtmlAttr(__('Your email')) ?>"
-                           class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
+                    <input
+                        type="email"
+                        name="email"
+                        id="email"
+                        autocomplete="email"
+                        required
+                        value="<?= $escaper->escapeHtmlAttr($block->getCustomer()->getEmail()) ?>"
+                        title="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
+                        placeholder="<?= $escaper->escapeHtmlAttr(__('Your email')) ?>"
+                        class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
                     />
                 </div>
-                <?php if ($errorMessage['email'] ?? false): ?>
+                <?php if (!empty($errorMessage['email'])): ?>
                     <div class="messages mt-1">
-                        <span><?= $escaper->escapeHtml($errorMessage['email']) ?></span>
+                        <span><?= $errorMessage['email'] ?></span>
                     </div>
                 <?php endif; ?>
             </div>
 
-            <div id="password-fields"
-                 x-cloak x-transition x-show="showEmailField || showPasswordFields"
-                 class="field field-reserved mt-3 mb-5<?= !empty($errorMessage['current_password']) ? ' field-error' : '' ?>"
-                 :class="{'!mt-7': !showEmailField, '!mb-0': showPasswordFields}"
+            <div
+                id="password-fields"
+                x-cloak
+                x-transition
+                x-show="showEmailField || showPasswordFields"
+                class="field field-reserved mt-3 mb-5<?= !empty($errorMessage['current_password']) || !empty($errorMessage['email_current_password']) ? ' field-error' : '' ?>"
+                :class="{'!mt-7': !showEmailField, '!mb-0': showPasswordFields}"
             >
                 <label class="sr-only tracking-widest" for="current-password">
                     <span><?= $escaper->escapeHtml(__('Current Password')) ?></span>
@@ -152,7 +178,8 @@ $errorMessage = $block->getErrorMessage();
                 <div>
                     <input type="password"
                            class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
-                           name="current_password" id="current-password"
+                           name="current_password"
+                           id="current-password"
                            data-input="current-password"
                            placeholder="<?= $escaper->escapeHtmlAttr(__('Your current password')) ?>"
                            required
@@ -160,18 +187,20 @@ $errorMessage = $block->getErrorMessage();
                            aria-describedby="password-strength-meter"
                     />
                 </div>
-                <?php if ($errorMessage['current_password'] ?? false): ?>
+                <?php if (!empty($errorMessage['current_password']) || !empty($errorMessage['email_current_password'])): ?>
                     <div class="messages mt-1">
-                        <span><?= $escaper->escapeHtml($errorMessage['current_password']) ?></span>
+                        <span><?= $errorMessage['current_password'] ?? $errorMessage['email_current_password'] ?></span>
                     </div>
                 <?php endif; ?>
             </div>
 
             <div x-cloak x-transition x-show="showPasswordFields">
                 <div class="field field-reserved mt-3<?= !empty($errorMessage['password']) ? ' field-error' : '' ?>">
-                    <label class="sr-only tracking-widest" for="password"><span>
+                    <label class="sr-only tracking-widest" for="password">
+                        <span>
                             <?= $escaper->escapeHtml(__('New Password')) ?>
-                    </span></label>
+                        </span>
+                    </label>
                     <div>
                         <input type="password"
                                class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
@@ -196,9 +225,9 @@ $errorMessage = $block->getErrorMessage();
                             </div>
                         </div>
                     </div>
-                    <?php if ($errorMessage['password'] ?? false): ?>
+                    <?php if (!empty($errorMessage['password'])): ?>
                         <div class="messages mt-1">
-                            <span><?= $escaper->escapeHtml($errorMessage['password']) ?></span>
+                            <span><?= $errorMessage['password'] ?></span>
                         </div>
                     <?php endif; ?>
                 </div>
@@ -218,9 +247,9 @@ $errorMessage = $block->getErrorMessage();
                                autocomplete="<?= $isAutocompleteEnabled ? 'new-password' : 'off' ?>"
                         />
                     </div>
-                    <?php if ($errorMessage['password_confirmation'] ?? false): ?>
+                    <?php if (!empty($errorMessage['password_confirmation'])): ?>
                         <div class="messages mt-1">
-                            <span><?= $escaper->escapeHtml($errorMessage['password_confirmation']) ?></span>
+                            <span><?= $errorMessage['password_confirmation'] ?></span>
                         </div>
                     <?php endif; ?>
                 </div>
@@ -235,16 +264,23 @@ $errorMessage = $block->getErrorMessage();
         <?php if ($recaptcha): ?>
             <div class="mt-3">
                 <?= $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) ?>
-              <p class="text-red-500 mt-1" x-text="recaptchaErrorMessage" v-show="Boolean(recaptchaErrorMessage)"></p>
+                <template x-if="displayErrorMessage">
+                    <p class="field-error">
+                        <template x-for="errorMessage in errorMessages">
+                            <span class="messages" x-html="errorMessage"></span>
+                        </template>
+                    </p>
+                </template>
             </div>
         <?php endif; ?>
 
         <div class="flex gap-x-4 flex-col md:flex-row mt-5">
-            <button type="submit"
-                    class="button button--filled-primary"
-                    :class="isLoading && 'button--disabled'"
-                    title="<?= $escaper->escapeHtmlAttr(__('Save')) ?>"
-                    :disabled="isLoading"
+            <button
+                type="submit"
+                class="button button--filled-primary"
+                :class="isLoading && 'button--disabled'"
+                title="<?= $escaper->escapeHtmlAttr(__('Save')) ?>"
+                :disabled="isLoading"
             >
                 <span x-text="isLoading ?
                     '<?= $escaper->escapeHtml(__('Saving...')) ?>' :
