Fix image banner content type issues

--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-banner.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-banner.phtml
@@ -87,6 +87,11 @@ $mobileAlignment = $block->getData('mobile_content_alignment');
             >
                 <?= $escaper->escapeHtml($block->getData('heading')) ?>
             </h2>
+            <?php if(!empty($block->getData('description'))): ?>
+                <p>
+                    <?= $escaper->escapeHtml($block->getData('description')) ?>
+                </p>
+            <?php endif; ?>
             <a
                 <?php if ($linkHref): ?>
                     href="<?= $escaper->escapeUrl($linkHref); ?>"
