--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-with-text.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-with-text.phtml
@@ -26,12 +26,12 @@ $appearance = $block->getData('appearance');
 ?>
 <div class="flex flex-col items-center md:grid md:grid-cols-2 xl:gap-20 2xl:gap-28 max-md:gap-7">
     <?php if ($block->getData('image')): ?>
-        <div class="relative overflow-hidden rounded-md">
-            <img src="<?= $escaper->escapeUrl($block->getData('image')) ?>" alt="<?= $escaper->escapeHtmlAttr($block->getData('heading')) ?>">
+        <div class="relative overflow-hidden rounded-md w-full">
+            <img src="<?= $escaper->escapeUrl($block->getData('image')) ?>" alt="<?= $escaper->escapeHtmlAttr($block->getData('heading')) ?>" class="w-full">
         </div>
     <?php endif; ?>
 
-    <div class="flex flex-col items-start gap-5 md:gap-7 md:py-12 md:pl-12 md:self-center" style="<?= $appearance === 'text-first' ? 'order: -1' : '' ?>">
+    <div class="flex flex-col items-start gap-5 md:gap-7 md:py-12 md:pl-12 md:self-center w-full" style="<?= $appearance === 'text-first' ? 'order: -1' : '' ?>">
         <h2 class="heading text-3xl text-text-500 md:text-4xl"><?= $escaper->escapeHtml($block->getData('heading')) ?></h2>
         <div><?= $block->getData('description') ?></div>
 
