--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/guest/form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/guest/form.phtml
@@ -12,13 +12,12 @@ $errorMessage = $block->getErrorMessage();
 ?>
 <div class="mx-auto mb-16 w-[412px] px-4 h-full flex items-center md:px-0 max-w-full">
     <form
-            x-data="{
+        x-data="{
                 authenticateBy: 'email'
             }"
-            class="w-full"
-            id="oar-widget-orders-and-returns-form"
-            action="<?= $escaper->escapeUrl($block->getActionUrl()) ?>"
-            method="post" name="guest_post"
+        class="w-full"
+        action="<?= $escaper->escapeUrl($block->getActionUrl()) ?>"
+        method="post" name="guest_post"
     >
         <fieldset class="fieldset">
             <?= $block->getBlockHtml('formkey') ?>
@@ -33,12 +32,12 @@ $errorMessage = $block->getErrorMessage();
                         <span><?= $escaper->escapeHtml(__('Order ID')) ?></span>
                     </label>
                     <input
-                            type="text"
-                            class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                            id="oar-order-id"
-                            name="oar_order_id"
-                            placeholder="<?= $escaper->escapeHtml(__('Order ID')) ?>"
-                            required
+                        type="text"
+                        class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                        id="oar-order-id"
+                        name="oar_order_id"
+                        placeholder="<?= $escaper->escapeHtml(__('Order ID')) ?>"
+                        required
                     />
                 </div>
                 <div class="mt-3">
@@ -60,12 +59,12 @@ $errorMessage = $block->getErrorMessage();
                             <span><?= $escaper->escapeHtml(__('Email')) ?></span>
                         </label>
                         <input
-                                type="email"
-                                class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                                id="oar_email"
-                                name="oar_email"
-                                placeholder="<?= $escaper->escapeHtml(__('Email')) ?>"
-                                :required="authenticateBy !== 'zip'"
+                            type="email"
+                            class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                            id="oar_email"
+                            name="oar_email"
+                            placeholder="<?= $escaper->escapeHtml(__('Email')) ?>"
+                            :required="authenticateBy !== 'zip'"
                         />
                     </div>
                 </div>
@@ -75,12 +74,12 @@ $errorMessage = $block->getErrorMessage();
                             <span><?= $escaper->escapeHtml(__('Billing ZIP Code')) ?></span>
                         </label>
                         <input
-                                type="text"
-                                class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                                id="oar_zip"
-                                name="oar_zip"
-                                placeholder="<?= $escaper->escapeHtml(__('Billing ZIP Code')) ?>"
-                                :required="authenticateBy === 'zip'"
+                            type="text"
+                            class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                            id="oar_zip"
+                            name="oar_zip"
+                            placeholder="<?= $escaper->escapeHtml(__('Billing ZIP Code')) ?>"
+                            :required="authenticateBy === 'zip'"
                         />
                     </div>
                 </div>
@@ -90,12 +89,12 @@ $errorMessage = $block->getErrorMessage();
                             <span><?= $escaper->escapeHtml(__('Billing Last Name')) ?></span>
                         </label>
                         <input
-                                type="text"
-                                class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                                id="oar-billing-lastname"
-                                name="oar_billing_lastname"
-                                placeholder="<?= $escaper->escapeHtml(__('Billing Last Name')) ?>"
-                                required
+                            type="text"
+                            class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                            id="oar-billing-lastname"
+                            name="oar_billing_lastname"
+                            placeholder="<?= $escaper->escapeHtml(__('Billing Last Name')) ?>"
+                            required
                         />
                     </div>
                 </div>
@@ -106,9 +105,15 @@ $errorMessage = $block->getErrorMessage();
                 <?php endif; ?>
             </div>
         </fieldset>
-        <button type="submit" title="<?= $escaper->escapeHtml(__('Continue')) ?>"
-                class="button button--filled-primary mt-7 w-full py-4" name="send">
-            <span><?= $escaper->escapeHtml(__('Continue')) ?></span>
+        <button
+            type="submit"
+            title="<?= $escaper->escapeHtml(__('Continue')) ?>"
+            class="button button--filled-primary mt-7 w-full py-4"
+            name="send"
+        >
+            <span>
+                <?= $escaper->escapeHtml(__('Continue')) ?>
+            </span>
         </button>
     </form>
 </div>
