--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
@@ -218,7 +218,7 @@ $errorMessage = $block->getErrorMessage();
                 </div>
 
                 <?php if ($block->getShowAddressFields()): ?>
-                    <div class="grid lg:grid-cols-2 gap-3">
+                    <div class="grid gap-3">
                         <input type="hidden" name="create_address" value="1"/>
 
                         <?php $company = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Company::class) ?>
@@ -254,7 +254,7 @@ $errorMessage = $block->getErrorMessage();
                                     @input.debounce="onChange"
                                 />
                             </div>
-                            <?php if ($errorMessage['street[]']): ?>
+                            <?php if (!empty($errorMessage['street[]'])): ?>
                                 <div class="messages mt-1">
                                     <span><?= $errorMessage['street[]'] ?></span>
                                 </div>
@@ -303,7 +303,7 @@ $errorMessage = $block->getErrorMessage();
                                     placeholder="<?= $escaper->escapeHtmlAttr(__('Enter your postcode')) ?>"
                                 />
                             </div>
-                            <?php if ($errorMessage['postcode']): ?>
+                            <?php if (!empty($errorMessage['postcode'])): ?>
                                 <div class="messages mt-1">
                                     <span><?= $errorMessage['postcode'] ?></span>
                                 </div>
@@ -330,7 +330,7 @@ $errorMessage = $block->getErrorMessage();
                                     @input.debounce="onChange"
                                 />
                             </div>
-                            <?php if ($errorMessage['city']): ?>
+                            <?php if (!empty($errorMessage['city'])): ?>
                                 <div class="messages mt-1">
                                     <span><?= $errorMessage['city'] ?></span>
                                 </div>
@@ -392,7 +392,7 @@ $errorMessage = $block->getErrorMessage();
                                     @input.debounce="onChange"
                                 />
                             </div>
-                            <?php if ($errorMessage['region']): ?>
+                            <?php if (!empty($errorMessage['region'])): ?>
                                 <div class="messages mt-1">
                                     <span><?= $errorMessage['region'] ?></span>
                                 </div>
